# CP-project

./: .gitignore  CMakeLists.txt  QUICK_START.md  README.md  REPORT.md
data/: questions.json
src/: game.c  game.h  main.c  questions.c  questions.h  timer.c  timer.h  utils.c  utils.h
tests/: test_main.c  test_questions.c  test_utils.c
